# rnaseq-pipeline

./: .gitattributes  .gitignore  .gitmodules  MANIFEST.in  Makefile  README.md  README.pavlab.md  bootstrap.sh  environment.yml  example.luigi.cfg  find-samples-with-multiple-lanes.py  htseq_all.sh  luigi-wrapper  pyproject.toml  pytest.ini  requirements.txt  setup.py  star_all.py  testlist.sh
Assemblies/: README  README.md  rsem_make_star_human_reference.sh  rsem_make_star_reference.sh
Data/: README.md
Requirements/: INSTALL  README  README.md  TODO  pip-requirements.txt  wonderdump.sh
data/: luigi.fish  rnaseq-pipeline-viewer.service
doc/: memory.md  parallelism.md
etc/: README.md  common.cfg.EXAMPLE  load_configs.R  load_configs.sh  load_configs_andthen.sh
graphmake/: README  produce_stats.R  report_genes.sh  utils.py
rnaseq_pipeline/: __init__.py  cli.py  config.py  credentials.json  cwl_utils.py  gemma.py  gsheet.py  miniml_utils.py  platforms.py  rnaseq_utils.py  targets.py  tasks.py  tenx_utils.py  utils.py  viewer.py  wrapped_tools.py
scheduler/: README.md  config.py  gemmaclient.py  luigi.cfg  miniml_utils.py  parson.py  poll.sh  progressReport.sh  restart_server.sh  schedule.sh  schedule_from_file.sh  schedule_from_file_gemma.sh  schedule_from_file_metadata.sh  scheduled_external_program.py  skipTask.sh  start_server.sh  stop_server.sh  targets.py  tasks.py  utils.py  wipe_out_gse.sh
scripts/: GSE_to_fastq.sh  Makefile  README.md  SA_download_miniml.sh  SRP_to_fastq.sh  alignment_metadata.sh  arrayexpress_to_fastq.R  arrayexpress_to_fastq.sh  (+36 more)
(+221 files in other folders)
