[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rnaseq-pipeline"
version = "2.1.12"
description = "RNA-Seq pipeline for the Pavlidis Lab"
authors = [
    { name = "Guillaume Poirier-Morency", email = "poirigui@msl.ubc.ca" },
    { name = "Ogan Mancarcii", email = "ogan.mancarcii@msl.ubc.ca" }
]
readme = "README.md"
license = "Unlicense"
license-files = ["LICENSE"]
requires-python = "==3.12.*"
dependencies = [
    'click',
    'luigi',
    'python-daemon<3.0.0',
    'bioluigi>=0.3.0',
    'requests',
    'pandas',
]

[project.optional-dependencies]
gsheet = ['google-api-python-client', 'google-auth-httplib2', 'google-auth-oauthlib', 'pyxdg']
webviewer = ['Flask', 'gunicorn']

[dependency-groups]
dev = ["pytest", "mypy"]

[project.scripts]
rnaseq-pipeline-cli = "rnaseq_pipeline.cli:main"
rnaseq-pipeline-cellranger = "rnaseq_pipeline.wrapped_tools:cellranger_wrapper"
rnaseq-pipeline-rsem-calculate-expression = "rnaseq_pipeline.wrapped_tools:rsem_calculate_expression_wrapper"

[tool.setuptools]
packages = ["rnaseq_pipeline", "rnaseq_pipeline.sources", "rnaseq_pipeline.webviewer"]

[tool.mypy]
plugins = ["luigi.mypy"]
